--- a/public/templates/info/faq-kiso-it.html
+++ b/public/templates/info/faq-kiso-it.html
@@ -6,7 +6,9 @@
     </button>
     <div class="collapse" id="collapse10">
     <div class="well">
-        Le iscrizioni iniziano martedì 3 marzo alle 19.00 in orario. Solo in questo momento appare il bottone <button type="button" class="btn btn-xlarge btn-success"><span class='glyphicon glyphicon-user'></span><br /><div style="font-size:25%">{{"BTN.RESERVE" | translate}}</div></button>. Cliccando su questo bottone apparirà il modulo di iscrizione (vedi sotto). PER POTERSI ISCRIVERE, È NECESSARIO AVERE UN ACCOUNT UTENTE ED ESSERE CONNESSI!
+        Le iscrizioni iniziano martedì 3 marzo alle 19.00 in orario. Solo in questo momento appare il bottone <button type="button" class="btn btn-xlarge btn-success"><span class='glyphicon glyphicon-user'></span><br /><div style="font-size:25%">{{"BTN.RESERVE" | translate}}</div></button>. Cliccando su questo bottone apparirà il modulo di iscrizione (vedi sotto). PER POTERSI ISCRIVERE, È NECESSARIO AVERE UN ACCOUNT UTENTE ED ESSERE CONNESSI!<br />Attenzione: per questo il sito deve essere riaperto alle 19:00
+        <img src="./../../../../assets/screen/kiso_screen_reg1-it.jpg" alt="Registrierung" style="height:110px;float:left;margin-right:15px" />
+        <img src="./../../../../assets/screen/kiso_screen_reg2-it.jpg" alt="Registrierung" style="height:110px;float:left;margin-right:15px" />
     </div>
     </div>
     <br />
