--- a/public/templates/info/faq-kiso-de.html
+++ b/public/templates/info/faq-kiso-de.html
@@ -5,10 +5,10 @@
         Ab wann kann ich mein Kind anmelden?  <span class="caret"></span>
     </button>
     <div class="collapse" id="collapse1">
-    <div class="well">
+    <div class="well" style="min-height:400px;">
     Die Anmeldungen beginnen am Dienstag, 3. März pünktlich um 19.00 Uhr. Erst in diesem Moment erscheint der Button <button type="button" class="btn btn-xlarge btn-success"><span class='glyphicon glyphicon-user'></span><br /><div style="font-size:25%">{{"BTN.RESERVE" | translate}}</div></button>. Mit Klick auf diesen Button erscheint das Anmeldeformular (siehe unten). <br />UM SICH ANMELDEN ZU KÖNNEN, MÜSSEN SIE ÜBER EIN BENUTZERKONTO VERFÜGEN UND EINGELOGGT SEIN!<br />Achtung: Dafür muss um 19.00 Uhr die Homepage neu geöffnet werden
-    <img src="./../../../../assets/screen/kiso_screen_reg1-de.jpg" alt="Registrierung" style="height:250px;float:left;margin-right:15px" />
-    <img src="./../../../../assets/screen/kiso_screen_reg2-de.jpg" alt="Registrierung" style="height:250px;float:left;margin-right:15px" />
+    <img src="./../../../../assets/screen/kiso_screen_reg1-de.jpg" alt="Registrierung" style="height:300;float:left;margin-right:15px" />
+    <img src="./../../../../assets/screen/kiso_screen_reg2-de.jpg" alt="Registrierung" style="height:300px;float:left;margin-right:15px" />
     </div>
     </div>
     <br />
