--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -99,11 +99,11 @@
 						<div class='form-group' ng-class='{ "has-error": registrationForm.schoolChild.$invalid }'>
 							<label for='schoolChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_SCHOOL_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
-									<select ng-show='lang === "de"' name='schoolChild' class='sel-base form-control' ng-disabled="disabledForSibling" ng-model='schoolChild'>
+									<select ng-show='lang === "de"' name='schoolChild' class='sel-base form-control' ng-model='schoolChild'>
 
 										<option ng-repeat="level in schoolLevels" value='{{level.name}}'>{{level.name}}</option>
 									</select>
-									<select ng-show="lang === 'it'" name='schoolChild' class='sel-base form-control' ng-disabled="disabledForSibling" ng-model='schoolChild'>
+									<select ng-show="lang === 'it'" name='schoolChild' class='sel-base form-control' ng-model='schoolChild'>
 										<option ng-repeat="level in schoolLevels" value='{{level.name}}'>{{level.name_it}}</option>
 									</select>
 								<!--<input name='schoolChild' type='text' ng-model='schoolChild' required maxlength='100' class='form-control'></input>-->
@@ -366,7 +366,7 @@
 						</div>
 						<br />
 						
-						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL())">
+						<div>
 								<input type='checkbox' name='media-jdbl' ng-model='acceptsMediaPublication'><strong>{{"RESERVATION.LABEL_MEDIA1_JDBL" | translate}}{{"RESERVATION.LABEL_MEDIA2_JDBL" | translate}}{{"RESERVATION.LABEL_MEDIA3_JDBL" | translate}}</strong></input>
 								<div class="panel panel-default" ng-class="mediaVisibility ? 'show' : 'hidden'">
 									<div class="panel-body">
@@ -374,18 +374,14 @@
 										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
 										<div ng-show="(platform.isJDUL()) && lang == 'de'" ng-include src='"templates/agb/ds-jdul-de.html"'></div>
 										<div ng-show="(platform.isJDUL()) && lang == 'it'" ng-include src='"templates/agb/ds-jdul-it.html"'></div>	
+										<div ng-show="(platform.isKiso()) && lang == 'de'" ng-include src='"templates/agb/ds-kiso-de.html"'></div>
+										<div ng-show="(platform.isKiso()) && lang == 'it'" ng-include src='"templates/agb/ds-kiso-it.html"'></div>	
 									</div>
 								</div>
 						</div>
 						<br />
-						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL())">
-								<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH3_JDBL" | translate}}</strong></input>
-								<!-- <div class="panel panel-default" ng-class="healthVisibility ? 'show' : 'hidden'">
-									<div class="panel-body">
-										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
-										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer() || platform.isJDUL()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
-									</div>
-								</div> -->
+						<div>
+							<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}{{"RESERVATION.LABEL_HEALTH3_JDBL" | translate}}</strong></input>
 						</div>
 						<br />
 						<div ng-show="(platform.isTest() || platform.isJDUL())">
@@ -397,7 +393,7 @@
 								</div>
 							</div>
 						</div>
-						<br />
+						<!-- <br />
 						<div ng-show="(platform.isTest() || platform.isKiso())">
 							<input type='checkbox' name='privacy' ng-model='acceptPrivacy'><strong>{{"RESERVATION.LABEL_PRIVACY1" | translate}}<button type="button" class="btn btn-default" ng-click="togglePrivacy()" >{{"RESERVATION.LABEL_PRIVACY2" | translate}}</button>{{"RESERVATION.LABEL_PRIVACY3" | translate}}</strong></input>
 							<div class="panel panel-default" ng-class="privacyVisibility ? 'show' : 'hidden'">
@@ -416,7 +412,7 @@
 									<div ng-show="(platform.isKiso() || platform.isTest()) && lang == 'it'" ng-include src='"templates/agb/media-kiso-it.html"'></div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<br />
 						<div ng-show="(platform.isTest() || platform.isKiso())">
 							<input type='checkbox' name='newsletter' ng-model='acceptsNewsletter'><strong>{{"RESERVATION.LABEL_NEWSLETTER" | translate}}</strong></input>
