--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -298,7 +298,7 @@
 								<div class='row'>
 									<div class='col-sm-1' ng-disabled='canNotReserve(activity)'>
 										<input ng-show="!platform.isKiso()" type="checkbox" value="" ng-disabled='canNotReserve(activity)' ng-click="toggleActivity(activity._id)">
-										<input ng-show="platform.isKiso()" type="radio" name="acts" value="" ng-disabled='canNotReserve(activity)' ng-click="toggleActivity(activity._id)">
+										<input ng-show="platform.isKiso()" type="radio" name="acts" value="" ng-disabled='canNotReserve(activity)' ng-click="toggleActivityKiso(activity._id)">
 									</div>
 									<div class='col-sm-3'>
 										<strong ng-show="lang == 'de'">{{activity.name}}</strong>
