small adaptions kiso registration

--- a/public/templates/agb/ds-kiso-de.html
+++ b/public/templates/agb/ds-kiso-de.html
@@ -7,13 +7,13 @@
 				<li>
 					<h4>Zweck der Angabe Ihrer personenbezogenen Daten</h4>
 					<div>
-						Wir benötigen bestimmte Daten von Dir, damit wir wissen, wer am Sommerprogramm teilnimmt, wie alt Du bist und in welche Klasse Du gehst, da das Programm jungen Menschen ab einem bestimmten Personen vorenthalten ist. Ebenso benötigen wir Daten Deiner Eltern / erziehungsberechtigten Personen für organisatorische Angelegenheiten und Kontakte im Notfall. Zudem benötigen wir einige Gesundheitsdaten von Dir, damit wir zum einen auf Deine Bedürfnisse (bspw. Essen, Beeinträchtigungen etc.) Rücksicht nehmen können und wir, im Bedarfsfall, Dir unmittelbar helfen können. Daten für unsere Öffentlichkeitsarbeit (wir wollen gerne Fotos von Dir veröffentlichen) sind nicht für die Teilnahme am Sommerprogramm notwendig. Damit wir diese verarbeiten können, benötigen wir die Einwilligung Deiner Eltern / erziehungsberechtigten Personen.
+						Wir benötigen bestimmte Daten von Dir, damit wir wissen, wer am Sommerprogramm teilnimmt, wie alt Du bist und in welche Klasse Du gehst, da das Programm jungen Menschen ab einem bestimmten Alter vorenthalten ist. Ebenso benötigen wir Daten Deiner Eltern / erziehungsberechtigten Personen für organisatorische Angelegenheiten und Kontakte im Notfall. Zudem benötigen wir einige Gesundheitsdaten von Dir, damit wir zum einen auf Deine Bedürfnisse (bspw. Essen, Beeinträchtigungen etc.) Rücksicht nehmen können und wir, im Bedarfsfall, Dir unmittelbar helfen können. Daten für unsere Öffentlichkeitsarbeit (wir wollen gerne Fotos von Dir veröffentlichen) sind nicht für die Teilnahme am Sommerprogramm notwendig. Damit wir diese verarbeiten können, benötigen wir die Einwilligung Deiner Eltern / erziehungsberechtigten Personen.
 					</div>
 				</li>
 				<li>
 					<h4>Minderjährige Personen</h4>
 					<div>
-						Da Du minderjährig bist, müssen beide Eltern bzw. die erziehungsberechtigten Personen diese Datenschutzerklärung zur Kenntnis nehmen bzw. müssen diese die Einwilligung sowohl der Gesundheitsdaten als auch zur Verarbeitung der fakultativen Daten geben. In der Folge umfasst der Begriff „Du“ sowohl Dich persönlich auch die jeweils erziehungsberechtigten Personen.
+						Da Du minderjährig bist, müssen beide Eltern bzw. die erziehungsberechtigten Personen diese Datenschutzerklärung zur Kenntnis nehmen bzw. müssen diese die Einwilligung sowohl der Gesundheitsdaten als auch zur Verarbeitung der fakultativen Daten geben. In der Folge umfasst der Begriff „Du“ sowohl Dich persönlich als auch die jeweils erziehungsberechtigten Personen.
 					</div>
 				</li>
 				<li>
