display instrument in Jugendsommer report

--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -185,11 +185,11 @@
 			<th>Kontak2</th>
 			<th>Tel. Kontakt2</th>
 			<th>T-Shirt</th>
-			<th>Gesundheit. Probleme</th>
+			<th ng-show='!platform.isJDUL()'>Gesundheit. Probleme</th>
 			<th>Unverträglichkeiten</th>
 			<th>Allergien</th>
 			<th>Medikamente</th>
-			<th>Beeinträchtigung</th>
+			<th ng-show='!platform.isJDUL()'>Beeinträchtigung</th>
 			<th>Diagnose</th>
 			<th ng-show='platform.isJDUL()'>Kann Schwimmen</th>
 			<th ng-show='platform.isJDUL()'>Darf allein nach Hause</th>
@@ -198,6 +198,7 @@
 			<th ng-show='platform.isKiso()'>News</th>
 			<th ng-show='platform.isJugendsommer()'>eigens EBike</th>
 			<th ng-show='platform.isJugendsommer()'>Körpergröße</th>
+			<th ng-show='platform.isJugendsommer()'>Instrument</th>
 			<th>Anmeldedatum</th>
 		</tr>
 		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
@@ -235,11 +236,11 @@
 			<td>{{reg.nameContact2}}</td>
 			<td>{{reg.telContact2}}</td>
 			<td>{{reg.tShirtSize}}</td>
-			<td>{{formatBool(reg.hasHealthIssues)}}</td>
+			<td ng-show='!platform.isJDUL()'>{{formatBool(reg.hasHealthIssues)}}</td>
 			<td>{{reg.healthIncompatibility}}</td>
 			<td>{{reg.healthAllergy}}</td>
 			<td>{{reg.healthIllnes}}</td>
-			<td>{{formatBool(reg.hasDisability)}}</td>
+			<td ng-show='!platform.isJDUL()'>{{formatBool(reg.hasDisability)}}</td>
 			<td>{{reg.disabilityDescription}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canSwim)}}</td>
 			<td ng-show='platform.isJDUL()'>{{formatBool(reg.canGoHomeAllone)}}</td>
@@ -248,6 +249,7 @@
 			<td ng-show='platform.isKiso()'>{{formatBool(reg.acceptsNewsletter)}}</td>
 			<td ng-show='platform.isJugendsommer()'>{{formatBool(reg.hasOwnEBike)}}</td>
 			<td ng-show='platform.isJugendsommer()'>{{reg.heightChild}}</td>
+			<td ng-show='platform.isJugendsommer()'>{{reg.instrument}}</td>
 			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>	
 		</tr>
 		<tr><td></td><td></td><td></td><td></td><td colspan='8'>Summe:</td><td align='right'>{{calculateOverallFee(registrations)}}</td><td colspan='17'></td></tr>
