--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -212,10 +212,10 @@
 			<td>{{reg.lastNameChild.toUpperCase()}}</td>
 			<!-- <td>{{formatBool(reg.needsEbK)}}</td> -->
 			<td ng-show='activityIdFilter' ng-class='{"bg-warning": isOnWait(reg), "bg-success": !isOnWait(reg)}'>{{formatBool(isOnWait(reg))}}</td>
-			<td ng-show='activityIdFilter'></td>
-			<td ng-show='activityIdFilter'></td>
-			<!-- <td ng-show='activityIdFilter'><input type='checkbox' ng-model='reg.isPrioUp'   ng-change='updateProperty(reg._id, "isPrioUp",   reg.isPrioUp)' style='margin-right:8px'>{{formatBool(reg.isPrioUp)}}</td>
-			<td ng-show='activityIdFilter'><input type='checkbox' ng-model='reg.isPrioDown' ng-change='updateProperty(reg._id, "isPrioDown", reg.isPrioDown)' style='margin-right:8px'>{{formatBool(reg.isPrioDown)}}</td> -->
+			<!-- <td ng-show='activityIdFilter'></td>
+			<td ng-show='activityIdFilter'></td> -->
+			<td ng-show='activityIdFilter'><input type='checkbox' ng-model='reg.isPrioUp'   ng-change='updateProperty(reg._id, "isPrioUp",   reg.isPrioUp)' style='margin-right:8px'>{{formatBool(reg.isPrioUp)}}</td>
+			<td ng-show='activityIdFilter'><input type='checkbox' ng-model='reg.isPrioDown' ng-change='updateProperty(reg._id, "isPrioDown", reg.isPrioDown)' style='margin-right:8px'>{{formatBool(reg.isPrioDown)}}</td>
 			<td ng-class='{"bg-success": reg.isPaymentDone, "bg-danger": !reg.isPaymentDone}'><input type='checkbox' ng-model='reg.isPaymentDone' ng-change='updateIsPaymentDone(reg._id, reg.isPaymentDone)' style='margin-right:8px' />{{formatBool(reg.isPaymentDone)}}</td>
 			<td ng-class='{"bg-success": reg.isEmailNotified, "bg-danger": !reg.isEmailNotified}'><input type='checkbox' ng-model='reg.isEmailNotified' ng-change='updateIsEmailNotified(reg._id, reg.isEmailNotified)' style='margin-right:8px' />{{formatBool(reg.isEmailNotified)}}</td>
 			<td>{{reg.receiptNumber}}</td>
