--- a/public/templates/eventContacts.html
+++ b/public/templates/eventContacts.html
@@ -80,7 +80,25 @@
                 <span class="glyphicon glyphicon-user" style="margin-right:3px;"></span>
                 <span class="list-group-item-heading"><strong>{{contactRel.contact.lastName}} {{contactRel.contact.firstName}}</strong></span>
                 <span class="glyphicon glyphicon-remove pull-right" style="margin-bottom:15px" ng-show="iSvc.isAuthorized('admin')" ng-click="removeContact(contact._id)"></span>
-                <p class="list-group-item-text">{{contactRel.role}} | Email: {{contactRel.contact.email}} | Tel: {{contactRel.contact.phoneNumber}}</p>
+                <span class="glyphicon glyphicon-pencil pull-right" style="margin-bottom:15px;margin-right: 20px;" ng-show="iSvc.isAuthorized('admin')" ng-click="toggleInlineEdit()"></span>
+                <p class="list-group-item-text">
+                    <div ng-show="!inlineEdit">{{contactRel.role}} | Email: {{contactRel.contact.email}} | Tel: {{contactRel.contact.phoneNumber}}</div>
+                    <div ng-show="inlineEdit" class="form-inline">
+                        <div class='form-group' ng-class='{ "has-error": contactForm.phoneNumber.$invalid }'>
+                            <label for='phoneNumberUpdate' class='control-label col-sm-2'>Tel: </label>
+                            <div class='col-sm-8'>
+                                <input type='tel' ng-model='contactRel.contact.phoneNumber' class='form-control' id='phoneNumberUpdate' />
+                            </div>
+                        </div>
+                        <div class='form-group' ng-class='{ "has-error": contactForm.email.$invalid }'>
+                            <label for='emailUpdate' class='control-label col-sm-2'>Email: </label>
+                            <div class='col-sm-8'>
+                                <input type='email' ng-model='contactRel.contact.email' class='form-control' id='emailUpdate' maxlength="200" />
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-default" ng-click="updateContact(contactRel.contact)">Update</button>
+                    </div> 
+                </p>
         </div>
     </div>
 
