set registration allowed date

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -19,10 +19,10 @@
 	
 	<div ng-show="(platform.isJugendsommer() || platform.isJDBL()) && isRegistrationWarningVisible()">
 		<div class="row">
-			<div class="col-sm-3">
+			<!--<div class="col-sm-3">
 				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 04 Februar 2020 um 19:00!</span></h2>
 				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 03 febbraio 2020 alle ore 19:00!</span></h2>
-			</div>
+			</div>-->
 		</div>
 	</div>
 
