--- a/public/templates/agb/agb-jdul-de.html
+++ b/public/templates/agb/agb-jdul-de.html
@@ -2,11 +2,11 @@
     <h2 class='text-orange col-sm-12'>Allgemeine Gesch&auml;tsbedingungen</h2>
     <div class='col-sm-9'>
         <h3>VORAUSGESCHICKT:</h3>
-        <p>Unsere Anmeldungen sind bindend und aus organisatorischen Gründen nur bis 20. März 2020 abänderbar. Nachmeldungen nach dem 20. März 2020 sind nicht mehr möglich. Auch während der Sommerferienprogramme können keine Nachmeldungen oder Wechsel mit anderen Kindern gemacht werden.</p>
+        <p>Unsere Anmeldungen sind bindend und aus organisatorischen Gründen nur bis 31. Mai 2020 abänderbar. Nachmeldungen nach dem 31. Mai 2020 sind nicht mehr möglich. Auch während der Sommerferienprogramme können keine Nachmeldungen oder Wechsel mit anderen Kindern gemacht werden.</p>
         <h3>BEGRENZTE TEILNEHMERZAHLEN</h3>
         <p>Aus organisatorischen Gründen ist für jedes Programm nur eine beschränkte Teilnehmerzahl vorgesehen.</p><!--Deshalb ist es wichtig, dass die Anmeldungen rechtzeitig und ausschließlich im Jugenddienst Unterland eingehen.<br />WICHTIG: Damit ein Programm stattfinden kann, werden <strong>mindestens 10 Kinder/Woche</strong> benötigt und <strong>maximal</strong> können <strong>30 Kinder/Woche</strong> teilnehmen.</p>-->
         <h3>TEILNAHMEBEITRAG</h3>
-        <p>Wir bitten Sie den Teilnehmerbeitrag innerhalb <strong>20.03.2020</strong> auf unser Konto zu überweisen.<br />Zahlungsgrund: Vor- und Nachname des Kindes und Wohnort<br><strong>BANKDATEN:<br />Raiffeisenkasse Salurn - Filiale Neumarkt<br />IBAN: IT27T0822058371000304204042</strong></p>
+        <p>Der Teilnahmebeitrag wird erst am 8. Juni fällig nachdem Sie die schriftliche Teilnahmebestätigung erhalten haben.</p><!--<p>Wir bitten Sie den Teilnehmerbeitrag innerhalb <strong>20.03.2020</strong> auf unser Konto zu überweisen.<br />Zahlungsgrund: Vor- und Nachname des Kindes und Wohnort<br><strong>BANKDATEN:<br />Raiffeisenkasse Salurn - Filiale Neumarkt<br />IBAN: IT27T0822058371000304204042</strong></p>-->
         <h3>KURSABSAGE UND STORNO</h3>
         <p>Nach erfolgter Anmeldung ist eine Abmeldung oder Rückerstattung des Teilnehmerbetrages aus organisatorischen Gründen nicht mehr möglich. Krankheitsbedingt wird gegen Vorlage eines ärztlichen Zeugnisses (innerhalb von 5 Tagen) die gesamte Teilnahmegebühr zurückerstattet.</p>
         <h4>Datenschutz: Mitteilung im Sinne des Art. 13 des Legislativdekretes Nr. 196/03:</h4>
