--- a/public/templates/agb/agb-jdul-it.html
+++ b/public/templates/agb/agb-jdul-it.html
@@ -2,7 +2,7 @@
     <h2 class='text-orange col-sm-12'>termini e condizioni generali</h2>
     <div class='col-sm-9'>
         <h3>PREMESSA:</h3>
-        <p>Le iscrizioni, per motivi organizzativi, sono vincolanti e non possono essere modificate dopo il 31 maggio 2020. Non è possibile iscriversi dopo il 31 maggio 2020.<br />ATTENZIONE: Anche durante il programma estivo non sarà più possibile iscriversi o di fare dei cambi con altri bambini.</p>
+        <p>Le iscrizioni, per motivi organizzativi, sono vincolanti e non possono essere modificate dopo il 2 junio 2020. Non è possibile iscriversi dopo il 2 junio 2020.<br />ATTENZIONE: Anche durante il programma estivo non sarà più possibile iscriversi o di fare dei cambi con altri bambini.</p>
         <h3>NUMERO LIMITATO DI PARTECIPANTI</h3>
         <p>Per motivi organizzativi è stato stabilito un numero massimo di partecipanti per ogni programma.</p> <!-- Pertanto è importante che l'iscrizione pervenga puntualmente ed esclusivamente tramite il Jugenddienst Unterland.<br />IMPORTANTE: Per lo svolgimento di un programma servono <strong>almeno 10 iscritti/settimana</strong> e al <strong>massimo possono partecipare 30 iscritti/settimana.</strong></p>-->
         <h3>QUOTA D'ISCRIZIONE</h3>
