--- a/public/templates/agb/agb-jdul-it.html
+++ b/public/templates/agb/agb-jdul-it.html
@@ -2,14 +2,15 @@
     <h2 class='text-orange col-sm-12'>termini e condizioni generali</h2>
     <div class='col-sm-9'>
         <h3>PREMESSA:</h3>
-        <p>Le iscrizioni, per motivi organizzativi, sono vincolanti e non possono essere modificate dopo il 2 junio 2020. Non è possibile iscriversi dopo il 2 junio 2020.<br />ATTENZIONE: Anche durante il programma estivo non sarà più possibile iscriversi o di fare dei cambi con altri bambini.</p>
+        <p>Per motivi organizzativi le iscrizioni sono vincolanti e non possono essere modificate dopo il 2 giugno 2020. Non è inoltre possibile iscriversi dopo questa data.</p>
+        <p>ATTENZIONE: Durante il programma estivo non sarà più possibile iscriversi o fare dei cambi con altri bambini.</p>
         <h3>NUMERO LIMITATO DI PARTECIPANTI</h3>
         <p>Per motivi organizzativi è stato stabilito un numero massimo di partecipanti per ogni programma.</p> <!-- Pertanto è importante che l'iscrizione pervenga puntualmente ed esclusivamente tramite il Jugenddienst Unterland.<br />IMPORTANTE: Per lo svolgimento di un programma servono <strong>almeno 10 iscritti/settimana</strong> e al <strong>massimo possono partecipare 30 iscritti/settimana.</strong></p>-->
         <h3>QUOTA D'ISCRIZIONE</h3>
-        <p>Der Teilnahmebeitrag wird erst am 8. Juni fällig nachdem Sie die schriftliche Teilnahmebestätigung erhalten haben.</p>
+        <p>La quota d’iscrizione è da versare dopo avere ricevuto la conferma di avvenuta iscrizione l’8 giugno.</p>
         <!--<p>Le chiediamo di versare la quota d'iscrizione sul nostro conto corrente entro <strong>20.03.2020</strong>.<br />Causale: Nome e cognome del bambino e comune di residenza<br /><strong>COORDINATE BANCARIE:<br />Cassa Raiffeisen Salorno - Filiale di Egna<br />IBAN: IT27T0822058371000304204042</strong></p>-->
         <h3>CANCELLAZIONE PROGRAMMA E STORNO</h3>
-        <p>per motivi organizzativi, non è più possibile annullare l'iscrizione o avere il rimborso della quota di partecipazione. In caso di malattia, (con presentazione di un certificato medico) sarà rimborsata l'intera quota (entro 5 giorni).</p>
+        <p>Per motivi organizzativi, dopo l’avvenuta iscrizione non è più possibile annullare l&#39;iscrizione e ottenere il rimborso della quota di partecipazione. In caso di malattia, (con certificato medico da presentare entro 5 giorni) sarà rimborsata l&#39;intera quota.</p>
         <h3>PRIVACY:</h3>
         <p>Tramite l'iscrizione viene dato il consenso al trattamento dei dati personali nell'ambito della gestione dei programmi in conformità con le norme vigenti sulla protezione dei dati, in base al decreto provinciale L.D. 196/2003.</p>
         <h4>Informativa ai sensi dell´art. 13 D. LGS. 196/2003: </h4>
