--- a/public/templates/info/info-jdul-it.html
+++ b/public/templates/info/info-jdul-it.html
@@ -1,7 +1,6 @@
 <div class="container" <div class="container" style="font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;">
 <img src="./../../../assets/jdul_ente.jpg" style="height:320px;margin-right:15px" /><br />
-<p>Programma vacanze estive per bambini della scuola materna, bambini della scuola elementare e ragazzi deall scuola media nella Bassa Atesina</p>
-<p>Ulteriori informazioni trovate nel  <a href="https://www.jugenddienstunterland.it/app/download/7931168161/BROSCH%C3%9CRE_2020.pdf?t=1580297540">opuscolo</a> oppure sotto <a href="https://www.jugenddienstunterland.it/">www.jugenddienstunterland.it</a></p>
+<p><a href="https://www.jugenddienstunterland.it/italiano/5-offerte/5-6-domande-frequenti/">Domande frequenti</a></p>
 <!-- <h2>Programma vacanze estive per bambini della scuola materna e la  scuola elementare</h2>
 <h4 class="brand-orange">IL PROGRAMMA:</h4>
 <p>
