--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -11,8 +11,10 @@
 	<div ng-show="platform.isJDUL()">
 		<div class="row">
 			<div class="col-sm-3">
-				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 26.05.2020   <a href="https://www.jugenddienstunterland.it/deutsch/5-angebote/5-6-h%C3%A4ufige-fragen/">Häufige Fragen</a></span></h2>
-				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 26.05.2020   <a href="https://www.jugenddienstunterland.it/italiano/5-offerte/5-6-domande-frequenti/">Domande frequenti</a></span></h2>
+				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 26.05.2020</span></h2>
+				<h2><span ng-show="lang == 'de'" class="label label-warning"><a href="https://www.jugenddienstunterland.it/deutsch/5-angebote/5-6-h%C3%A4ufige-fragen/">Häufige Fragen</a></span></h2>
+				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 26.05.2020</span></h2>
+				<h2><span ng-show="lang == 'it'" class="label label-warning"><a href="https://www.jugenddienstunterland.it/italiano/5-offerte/5-6-domande-frequenti/">Domande frequenti</a></span></h2>
 			</div>
 		</div>
 	</div>
