--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -201,6 +201,9 @@
 			<th ng-show='platform.isJugendsommer()'>Körpergröße</th>
 			<th ng-show='platform.isJugendsommer()'>Instrument</th>
 			<th ng-show='platform.isJugendsommer()'>Wunschfreund(in)</th>
+			<th ng-show='platform.isJDUL()'>Prio Arbeit</th>
+			<th ng-show='platform.isJDUL()'>Prio Sozial</th>
+			<th ng-show='platform.isJDUL()'>Prio -</th>
 			<th>Anmeldedatum</th>
 		</tr>
 		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
@@ -254,6 +257,9 @@
 			<td ng-show='platform.isJugendsommer()'>{{reg.heightChild}}</td>
 			<td ng-show='platform.isJugendsommer()'>{{reg.instrument}}</td>
 			<td ng-show='platform.isJugendsommer()'>{{reg.preferredFellow}}</td>
+			<td ng-show='platform.isJDUL()'>{{formatBool(reg.covidRules.isPrioWork)}}</td>
+			<td ng-show='platform.isJDUL()'>{{formatBool(reg.covidRules.isPrioSocial)}}</td>
+			<td ng-show='platform.isJDUL()'>{{formatBool(reg.covidRules.isPrioNone)}}</td>
 			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>	
 		</tr>
 		<tr><td></td><td></td><td></td><td></td><td colspan='8'>Summe:</td><td align='right'>{{calculateOverallFee(registrations)}}</td><td colspan='17'></td></tr>
