--- a/public/templates/registration/registrationEdit.html
+++ b/public/templates/registration/registrationEdit.html
@@ -207,9 +207,9 @@
 	<div class="panel panel-default" ng-show="platform.isTest() || platform.isJDUL()">
 		<div class="panel-body">
 				<p>{{"RESERVATION.LABEL_COVID_PRIO_START" | translate}}</p>
-				<input type='radio' name='covidprio' ng-checked="covidRules.isPrioWork" >  {{"RESERVATION.LABEL_COVID_PRIO_WORK" | translate}}</input></br>
-				<input type='radio' name='covidprio' ng-checked="covidRules.isPrioSocial" >  {{"RESERVATION.LABEL_COVID_PRIO_SOCIAL" | translate}}</input></br>
-				<input type='radio' name='covidprio' ng-checked="covidRules.isPrioNone" >  {{"RESERVATION.LABEL_COVID_PRIO_NONE" | translate}}</input>
+				<input type='radio' name='covidprio' ng-checked="covidRules.isPrioWork" ng-click='setCovidPrio("work")'>  {{"RESERVATION.LABEL_COVID_PRIO_WORK" | translate}}</input></br>
+				<input type='radio' name='covidprio' ng-checked="covidRules.isPrioSocial" ng-click='setCovidPrio("social")'>  {{"RESERVATION.LABEL_COVID_PRIO_SOCIAL" | translate}}</input></br>
+				<input type='radio' name='covidprio' ng-checked="covidRules.isPrioNone" ng-click='setCovidPrio("none")'>  {{"RESERVATION.LABEL_COVID_PRIO_NONE" | translate}}</input>
 		</div>
 	</div>
 
